Versão dois entrega IA

--- a/entrega - IA/Pseudonimização dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
+++ b/entrega - IA/Pseudonimização dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5e5e841e",
    "metadata": {},
    "outputs": [
@@ -31,28 +31,28 @@
        "      <th>nome</th>\n",
        "      <th>cargo</th>\n",
        "      <th>email</th>\n",
-       "      <th>senha_hash</th>\n",
+       "      <th>senha</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Carlos Silva</td>\n",
-       "      <td>Super Administrador</td>\n",
-       "      <td>carlos.silva@avicola.com.br</td>\n",
-       "      <td>Admin12345</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Ryan Cursino</td>\n",
+       "      <td>Desenvolvedor Crud</td>\n",
+       "      <td>Ryan.guloso@germinare.com.br</td>\n",
+       "      <td>Arakakilindo123</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id          nome                cargo                        email  \\\n",
-       "0   1  Carlos Silva  Super Administrador  carlos.silva@avicola.com.br   \n",
+       "   id          nome               cargo                         email  \\\n",
+       "0   3  Ryan Cursino  Desenvolvedor Crud  Ryan.guloso@germinare.com.br   \n",
        "\n",
-       "   senha_hash  \n",
-       "0  Admin12345  "
+       "             senha  \n",
+       "0  Arakakilindo123  "
       ]
      },
      "metadata": {},
@@ -99,29 +99,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "686adc16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>cargo</th>\n",
+       "      <th>email</th>\n",
+       "      <th>senha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>User000</td>\n",
+       "      <td>Des***************</td>\n",
+       "      <td>Ry*********@germinare.com.br</td>\n",
+       "      <td>Arakakilindo123</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id     nome               cargo                         email  \\\n",
+       "0   3  User000  Des***************  Ry*********@germinare.com.br   \n",
+       "\n",
+       "             senha  \n",
+       "0  Arakakilindo123  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Realizando as pseudonimizaçãoes necessárias\n",
     "#Criando um clone do dataframe original\n",
     "df_super_pseudo = df.copy()\n",
     "\n",
-    "#pseudonimização da coluna de id\n",
-    "df_super_pseudo['id'] = [ '*' * (len(str(id))-1)+str(id)[-1] if len(str(id))>1 else \"*\" for id in df_super_pseudo['id']]\n",
+    "#pseudonimização da coluna de id - sem necessidade\n",
     "#pseudonimização da coluna de nome\n",
-    "df_super_pseudo['nome'] = df_super_pseudo['nome'].apply(lambda nome: nome[:3]+f'{\"*\" * (len(nome)-3)}')\n",
+    "df_super_pseudo['nome'] = ['User'+str(cont).zfill(3) for cont in range(len(df_super_pseudo))]\n",
+    "#df_super_pseudo['nome'] = df_super_pseudo['nome'].apply(lambda nome: nome[:3]+f'{\"*\" * (len(nome)-3)}')\n",
     "#pseudonimização da coluna de cargo\n",
     "df_super_pseudo['cargo'] = df_super_pseudo['cargo'].apply(lambda cargo: cargo[:3]+f'{\"*\" * (len(cargo)-3)}')\n",
     "#pseudonimização da coluna de email\n",
-    "df_super_pseudo['email'] = df_super_pseudo['email'].apply(lambda email: email[:2] + f\"{'*' * (email.find('@') -2)}\"+email[email.find('@') +1:])\n",
-    "#pseudonimização da coluna de senha_hash - hashing\n"
+    "df_super_pseudo['email'] = df_super_pseudo['email'].apply(lambda email: email[:2] + f\"{'*' * (email.find('@') -2)}\"+email[email.find('@'):])\n",
+    "#pseudonimização da coluna de senha_hash - criptografia\n",
+    "\n",
+    "display(df_super_pseudo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "34bf3a62",
    "metadata": {},
    "outputs": [],
@@ -132,14 +187,14 @@
     "    \"nome\":\"nome_pseudo\",\n",
     "    \"cargo\" : \"cargo_pseudo\",\n",
     "    \"email\": \"email_pseudo\",\n",
-    "    \"senha_hash\": \"senha_hash\"\n",
+    "    \"senha\": \"senha_criptografada\"\n",
     "}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eac61562",
+   "execution_count": 4,
+   "id": "c0e9fd73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +202,6 @@
     "\n",
     "\n",
     "try:\n",
-    "    \n",
     "    conexao = psy.connect(\n",
     "        dbname = os.getenv(\"DB_PSEUDO\"),\n",
     "        user = os.getenv(\"USER\"),\n",
@@ -160,14 +214,7 @@
     "\n",
     "    #execução do comando para trazer os dados da tabela original\n",
     "    query = \"\"\"\n",
-    "    INSERT INTO super_adm_pseudo (id, nome_pseudo, cargo_pseudo, email_pseudo, senha_hash)\n",
-    "    VALUES (%s, %s, %s, %s, %s)\n",
-    "    ON CONFLICT (id) \n",
-    "    DO UPDATE SET\n",
-    "        nome_pseudo = EXCLUDED.nome_pseudo,\n",
-    "        cargo_pseudo = EXCLUDED.cargo_pseudo,\n",
-    "        email_pseudo = EXCLUDED.email_pseudo\n",
-    "        \n",
+    "    DELETE FROM super_adm_pseudo;\n",
     "    \"\"\" # - comando que vai ser aplicado\n",
     "\n",
     "    valores = [tuple(x) for x in df_super_pseudo.to_numpy()] # - transformando cada linha do dataframe em uma tupla\n",
@@ -187,7 +234,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
+   "id": "eac61562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Transferindo todas as informações do dataframe pseudonimizado para o banco de dados \n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    conexao = psy.connect(\n",
+    "        dbname = os.getenv(\"DB_PSEUDO\"),\n",
+    "        user = os.getenv(\"USER\"),\n",
+    "        password = os.getenv(\"PASSWORD\"),\n",
+    "        host = os.getenv(\"HOST\"),\n",
+    "        port = os.getenv(\"PORT\")\n",
+    "    ) # - estabelecendo a conexão com o banco de dados\n",
+    "\n",
+    "    cursor = conexao.cursor()\n",
+    "\n",
+    "    #execução do comando para trazer os dados da tabela original\n",
+    "    query = \"\"\"\n",
+    "    INSERT INTO super_adm_pseudo (id, nome_pseudo, cargo_pseudo, email_pseudo, senha_criptografada)\n",
+    "    VALUES (%s, %s, %s, %s, %s) \"\"\" # - comando que vai ser aplicado\n",
+    "\n",
+    "    valores = [tuple(x) for x in df_super_pseudo.to_numpy()] # - transformando cada linha do dataframe em uma tupla\n",
+    "\n",
+    "    for c in valores:\n",
+    "        cursor.execute(query, c) # - executando o comando no banco de dados\n",
+    "\n",
+    "    conexao.commit() # - salvando as alterações\n",
+    "\n",
+    "\n",
+    "    cursor.close() # - fechando conexão \n",
+    "    conexao.close() # - fechando conexão \n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Erro ao conectar com o banco: \"+str(e)) # - tratando exceção, (caso ocorra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4397308b",
    "metadata": {},
    "outputs": [],
