tirando o display dos arquivos .ipynb e exclusão de uma linha desnecessária

--- a/entrega - IA/Pseudonimização dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
+++ b/entrega - IA/Pseudonimização dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
@@ -5,60 +5,7 @@
    "execution_count": 1,
    "id": "5e5e841e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>nome</th>\n",
-       "      <th>cargo</th>\n",
-       "      <th>email</th>\n",
-       "      <th>senha</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Ryan Cursino</td>\n",
-       "      <td>Desenvolvedor Crud</td>\n",
-       "      <td>Ryan.guloso@germinare.com.br</td>\n",
-       "      <td>Arakakilindo123</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id          nome               cargo                         email  \\\n",
-       "0   3  Ryan Cursino  Desenvolvedor Crud  Ryan.guloso@germinare.com.br   \n",
-       "\n",
-       "             senha  \n",
-       "0  Arakakilindo123  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Importando as bibliotecas necessárias\n",
     "import pandas as pd\n",
@@ -87,7 +34,6 @@
     "\n",
     "    #Criando um dataframe apartir dos dados capturados\n",
     "    df = pd.DataFrame(cursor.fetchall(), columns=[item[0] for item in cursor.description])\n",
-    "    display(df) # - mostrando o dataframe\n",
     "\n",
     "\n",
     "    cursor.close() # - fechando conexão\n",
@@ -102,60 +48,7 @@
    "execution_count": 2,
    "id": "686adc16",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>nome</th>\n",
-       "      <th>cargo</th>\n",
-       "      <th>email</th>\n",
-       "      <th>senha</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>User000</td>\n",
-       "      <td>Des***************</td>\n",
-       "      <td>Ry*********@germinare.com.br</td>\n",
-       "      <td>Arakakilindo123</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id     nome               cargo                         email  \\\n",
-       "0   3  User000  Des***************  Ry*********@germinare.com.br   \n",
-       "\n",
-       "             senha  \n",
-       "0  Arakakilindo123  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Realizando as pseudonimizaçãoes necessárias\n",
     "#Criando um clone do dataframe original\n",
@@ -164,14 +57,11 @@
     "#pseudonimização da coluna de id - sem necessidade\n",
     "#pseudonimização da coluna de nome\n",
     "df_super_pseudo['nome'] = ['User'+str(cont).zfill(3) for cont in range(len(df_super_pseudo))]\n",
-    "#df_super_pseudo['nome'] = df_super_pseudo['nome'].apply(lambda nome: nome[:3]+f'{\"*\" * (len(nome)-3)}')\n",
     "#pseudonimização da coluna de cargo\n",
     "df_super_pseudo['cargo'] = df_super_pseudo['cargo'].apply(lambda cargo: cargo[:3]+f'{\"*\" * (len(cargo)-3)}')\n",
     "#pseudonimização da coluna de email\n",
     "df_super_pseudo['email'] = df_super_pseudo['email'].apply(lambda email: email[:2] + f\"{'*' * (email.find('@') -2)}\"+email[email.find('@'):])\n",
-    "#pseudonimização da coluna de senha_hash - criptografia\n",
-    "\n",
-    "display(df_super_pseudo)\n"
+    "#pseudonimização da coluna de senha_hash - criptografia\n"
    ]
   },
   {
