--- a/entrega - IA/Pseudonimização dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
+++ b/entrega - IA/Pseudonimização dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "5e5e841e",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "686adc16",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "34bf3a62",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "d496e0ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>nome_pseudo</th>\n",
+       "      <th>cargo_pseudo</th>\n",
+       "      <th>email_pseudo</th>\n",
+       "      <th>senha_criptografada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>User000</td>\n",
+       "      <td>Des***************</td>\n",
+       "      <td>Ry*********@germinare.com.br</td>\n",
+       "      <td>Arakakilindo123</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id nome_pseudo        cargo_pseudo                  email_pseudo  \\\n",
+       "0   3     User000  Des***************  Ry*********@germinare.com.br   \n",
+       "\n",
+       "  senha_criptografada  \n",
+       "0     Arakakilindo123  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#realizando o display do dataframe\n",
+    "display(df_super_pseudo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "c0e9fd73",
    "metadata": {},
    "outputs": [],
@@ -124,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "eac61562",
    "metadata": {},
    "outputs": [],
@@ -165,20 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "4397308b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Tranferindo as informações originais e pseudonimizadas para arquivos csv\n",
-    "df.to_csv('originais_superadm.csv')\n",
-    "df_super_pseudo.to_csv('pseudo_superadm.csv')"
+    "df.to_csv('CSV/originais_superadm.csv')\n",
+    "df_super_pseudo.to_csv('CSV/pseudo_superadm.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
