--- a/entrega - IA/Pseudonimização dos dados pessoais/tabelas/Usuário/usuario.ipynb
+++ b/entrega - IA/Pseudonimização dos dados pessoais/tabelas/Usuário/usuario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "440f7351",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "ef940d13",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "75469624",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "3cc01ab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>fk_fabrica_pseudo</th>\n",
+       "      <th>id_gerente_pseudo</th>\n",
+       "      <th>email_pseudo</th>\n",
+       "      <th>senha_criptografada</th>\n",
+       "      <th>nome_pseudo</th>\n",
+       "      <th>genero</th>\n",
+       "      <th>desc_tipoacesso_pseudo</th>\n",
+       "      <th>status_pseudo</th>\n",
+       "      <th>data_criacao_pseudo</th>\n",
+       "      <th>data_nascimento_pseudo</th>\n",
+       "      <th>cargo_pseudo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>***********************************cd87fea9ed</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>ger**********@seara.com.br</td>\n",
+       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>User000</td>\n",
+       "      <td>masc</td>\n",
+       "      <td>R************</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1980/**/**</td>\n",
+       "      <td>Ge*****</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>***********************************750d598b4a</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>sup*************@seara.com.br</td>\n",
+       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>User001</td>\n",
+       "      <td>fem</td>\n",
+       "      <td>l*************************</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1985/**/**</td>\n",
+       "      <td>Ge*****</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>***********************************db2db47906</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>ger**********@sadia.com.br</td>\n",
+       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>User002</td>\n",
+       "      <td>masc</td>\n",
+       "      <td>A***********</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1978/**/**</td>\n",
+       "      <td>Ge*****</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>***********************************ed47e5b949</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>ger********@jbs.com.br</td>\n",
+       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>User003</td>\n",
+       "      <td>fem</td>\n",
+       "      <td>A***********</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1982/**/**</td>\n",
+       "      <td>Ge*****</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>***********************************89dac60aa8</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>sup************@jbs.com.br</td>\n",
+       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>User004</td>\n",
+       "      <td>masc</td>\n",
+       "      <td>A**************</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1990/**/**</td>\n",
+       "      <td>Ge*****</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>***********************************05639d5f07</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>usu***************@seara.com.br</td>\n",
+       "      <td>Seara12345</td>\n",
+       "      <td>User005</td>\n",
+       "      <td>masc</td>\n",
+       "      <td>R************</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1980/**/**</td>\n",
+       "      <td>Us***********</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>***********************************3575b88602</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>usu****************@seara.com.br</td>\n",
+       "      <td>Seara12345</td>\n",
+       "      <td>User006</td>\n",
+       "      <td>fem</td>\n",
+       "      <td>l*************************</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1985/**/**</td>\n",
+       "      <td>Us***********</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>***********************************5c2369d7f3</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>usu***************@sadia.com.br</td>\n",
+       "      <td>Sadia12345</td>\n",
+       "      <td>User007</td>\n",
+       "      <td>masc</td>\n",
+       "      <td>A***********</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1978/**/**</td>\n",
+       "      <td>Us***********</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>***********************************6756130393</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>usu*************@jbs.com.br</td>\n",
+       "      <td>Jbs12345</td>\n",
+       "      <td>User008</td>\n",
+       "      <td>fem</td>\n",
+       "      <td>A***********</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1982/**/**</td>\n",
+       "      <td>Us***********</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>***********************************d5f5528818</td>\n",
+       "      <td>FK</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>usu**************@jbs.com.br</td>\n",
+       "      <td>Jbs12345</td>\n",
+       "      <td>User009</td>\n",
+       "      <td>masc</td>\n",
+       "      <td>A**************</td>\n",
+       "      <td>T***</td>\n",
+       "      <td>2025/**/** - **********************</td>\n",
+       "      <td>1990/**/**</td>\n",
+       "      <td>Us***********</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              id fk_fabrica_pseudo  \\\n",
+       "0  ***********************************cd87fea9ed                FK   \n",
+       "1  ***********************************750d598b4a                FK   \n",
+       "2  ***********************************db2db47906                FK   \n",
+       "3  ***********************************ed47e5b949                FK   \n",
+       "4  ***********************************89dac60aa8                FK   \n",
+       "5  ***********************************05639d5f07                FK   \n",
+       "6  ***********************************3575b88602                FK   \n",
+       "7  ***********************************5c2369d7f3                FK   \n",
+       "8  ***********************************6756130393                FK   \n",
+       "9  ***********************************d5f5528818                FK   \n",
+       "\n",
+       "  id_gerente_pseudo                      email_pseudo  \\\n",
+       "0                ID        ger**********@seara.com.br   \n",
+       "1                ID     sup*************@seara.com.br   \n",
+       "2                ID        ger**********@sadia.com.br   \n",
+       "3                ID            ger********@jbs.com.br   \n",
+       "4                ID        sup************@jbs.com.br   \n",
+       "5                ID   usu***************@seara.com.br   \n",
+       "6                ID  usu****************@seara.com.br   \n",
+       "7                ID   usu***************@sadia.com.br   \n",
+       "8                ID       usu*************@jbs.com.br   \n",
+       "9                ID      usu**************@jbs.com.br   \n",
+       "\n",
+       "                                 senha_criptografada nome_pseudo genero  \\\n",
+       "0  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User000   masc   \n",
+       "1  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User001    fem   \n",
+       "2  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User002   masc   \n",
+       "3  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User003    fem   \n",
+       "4  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User004   masc   \n",
+       "5                                         Seara12345     User005   masc   \n",
+       "6                                         Seara12345     User006    fem   \n",
+       "7                                         Sadia12345     User007   masc   \n",
+       "8                                           Jbs12345     User008    fem   \n",
+       "9                                           Jbs12345     User009   masc   \n",
+       "\n",
+       "       desc_tipoacesso_pseudo status_pseudo  \\\n",
+       "0               R************          T***   \n",
+       "1  l*************************          T***   \n",
+       "2                A***********          T***   \n",
+       "3                A***********          T***   \n",
+       "4             A**************          T***   \n",
+       "5               R************          T***   \n",
+       "6  l*************************          T***   \n",
+       "7                A***********          T***   \n",
+       "8                A***********          T***   \n",
+       "9             A**************          T***   \n",
+       "\n",
+       "                   data_criacao_pseudo data_nascimento_pseudo   cargo_pseudo  \n",
+       "0  2025/**/** - **********************             1980/**/**        Ge*****  \n",
+       "1  2025/**/** - **********************             1985/**/**        Ge*****  \n",
+       "2  2025/**/** - **********************             1978/**/**        Ge*****  \n",
+       "3  2025/**/** - **********************             1982/**/**        Ge*****  \n",
+       "4  2025/**/** - **********************             1990/**/**        Ge*****  \n",
+       "5  2025/**/** - **********************             1980/**/**  Us***********  \n",
+       "6  2025/**/** - **********************             1985/**/**  Us***********  \n",
+       "7  2025/**/** - **********************             1978/**/**  Us***********  \n",
+       "8  2025/**/** - **********************             1982/**/**  Us***********  \n",
+       "9  2025/**/** - **********************             1990/**/**  Us***********  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#mostrando as operações realizadas com os dados\n",
+    "display(df_user_pseudo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "8c6833de",
    "metadata": {},
    "outputs": [],
@@ -150,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "749cf18f",
    "metadata": {},
    "outputs": [],
@@ -192,20 +459,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "75e73042",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Tranferindo as informações originais e pseudonimizadas para os arquivos csv\n",
-    "df.to_csv('original_user.csv')\n",
-    "df_user_pseudo.to_csv('pseudo_user.csv')"
+    "df.to_csv('CSV\\original_user.csv')\n",
+    "df_user_pseudo.to_csv('CSV\\pseudo_user.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
