Executando as alterações finais, tanto no dataload, como nos notebook.

--- a/entrega - IA/Proteção dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
+++ b/entrega - IA/Proteção dos dados pessoais/tabelas/SuperAdm/SuperAdm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5e5e841e",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "686adc16",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "34bf3a62",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "d496e0ec",
    "metadata": {},
    "outputs": [
@@ -118,22 +118,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>User000</td>\n",
-       "      <td>Des***************</td>\n",
-       "      <td>Ry*********@germinare.com.br</td>\n",
-       "      <td>Arakakilindo123</td>\n",
+       "      <td>Dev********</td>\n",
+       "      <td>lu**********@germinare.org.br</td>\n",
+       "      <td>$2a$15$.RNms4TylNvpnjxb3FVP0eK8NMw9zXVbchFaZW6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>User001</td>\n",
+       "      <td>Dev********</td>\n",
+       "      <td>ry*********@germinare.org.br</td>\n",
+       "      <td>$2a$15$pSyKf8/wrB7lLO6YrYlHL.hfDiFeIiKsqtV0Gmz...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>User002</td>\n",
+       "      <td>Dev*********</td>\n",
+       "      <td>gu*********@germinare.org.br</td>\n",
+       "      <td>$2a$15$CweaGwjD9fESqkuFqFliJeyLEy1Vv6cBYx.05bL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>User003</td>\n",
+       "      <td>Dev*********</td>\n",
+       "      <td>lu**********@germinare.org.br</td>\n",
+       "      <td>$2a$15$6pG3a8QJkb9F2jcHhtIl..WeLMoohFveGlqs8XJ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>User004</td>\n",
+       "      <td>Ana**************</td>\n",
+       "      <td>en**********@germinare.org.br</td>\n",
+       "      <td>$2a$15$4CHCAC2RhRkDnPXvOt5JDuM5/pfBTTa09.9oTbT...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>User005</td>\n",
+       "      <td>UX ******************************</td>\n",
+       "      <td>le*************@germinare.org.br</td>\n",
+       "      <td>$2a$15$3g5smqPP7tPeNpDjyGUiKumKB9yIsELtWM9g.31...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>User006</td>\n",
+       "      <td>Eng****************</td>\n",
+       "      <td>ni*********@germinare.org.br</td>\n",
+       "      <td>$2a$15$SbjpG85.RrTeBLkMZY8HkeRzaoAJCpTUHdxvUMv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>User007</td>\n",
+       "      <td>Eng****************</td>\n",
+       "      <td>da********@germinare.org.br</td>\n",
+       "      <td>$2a$15$hZ0zxuAZin4X0vtq54DKEOYVaSXpYnPseLoHElA...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id nome_pseudo        cargo_pseudo                  email_pseudo  \\\n",
-       "0   3     User000  Des***************  Ry*********@germinare.com.br   \n",
+       "   id nome_pseudo                       cargo_pseudo  \\\n",
+       "0   1     User000                        Dev********   \n",
+       "1   2     User001                        Dev********   \n",
+       "2   3     User002                       Dev*********   \n",
+       "3   4     User003                       Dev*********   \n",
+       "4   5     User004                  Ana**************   \n",
+       "5   6     User005  UX ******************************   \n",
+       "6   7     User006                Eng****************   \n",
+       "7   8     User007                Eng****************   \n",
        "\n",
-       "  senha_criptografada  \n",
-       "0     Arakakilindo123  "
+       "                       email_pseudo  \\\n",
+       "0     lu**********@germinare.org.br   \n",
+       "1      ry*********@germinare.org.br   \n",
+       "2      gu*********@germinare.org.br   \n",
+       "3     lu**********@germinare.org.br   \n",
+       "4     en**********@germinare.org.br   \n",
+       "5  le*************@germinare.org.br   \n",
+       "6      ni*********@germinare.org.br   \n",
+       "7       da********@germinare.org.br   \n",
+       "\n",
+       "                                 senha_criptografada  \n",
+       "0  $2a$15$.RNms4TylNvpnjxb3FVP0eK8NMw9zXVbchFaZW6...  \n",
+       "1  $2a$15$pSyKf8/wrB7lLO6YrYlHL.hfDiFeIiKsqtV0Gmz...  \n",
+       "2  $2a$15$CweaGwjD9fESqkuFqFliJeyLEy1Vv6cBYx.05bL...  \n",
+       "3  $2a$15$6pG3a8QJkb9F2jcHhtIl..WeLMoohFveGlqs8XJ...  \n",
+       "4  $2a$15$4CHCAC2RhRkDnPXvOt5JDuM5/pfBTTa09.9oTbT...  \n",
+       "5  $2a$15$3g5smqPP7tPeNpDjyGUiKumKB9yIsELtWM9g.31...  \n",
+       "6  $2a$15$SbjpG85.RrTeBLkMZY8HkeRzaoAJCpTUHdxvUMv...  \n",
+       "7  $2a$15$hZ0zxuAZin4X0vtq54DKEOYVaSXpYnPseLoHElA...  "
       ]
      },
      "metadata": {},
@@ -147,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "c0e9fd73",
    "metadata": {},
    "outputs": [],
@@ -188,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "eac61562",
    "metadata": {},
    "outputs": [],
@@ -229,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "4397308b",
    "metadata": {},
    "outputs": [],
