--- a/entrega - IA/Proteção dos dados pessoais/tabelas/Usuário/usuario.ipynb
+++ b/entrega - IA/Proteção dos dados pessoais/tabelas/Usuário/usuario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "440f7351",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "ef940d13",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "75469624",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "3cc01ab4",
    "metadata": {},
    "outputs": [
@@ -150,153 +150,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>***********************************cd87fea9ed</td>\n",
+       "      <td>***********************************5e971d6ddf</td>\n",
        "      <td>FK</td>\n",
        "      <td>ID</td>\n",
-       "      <td>ger**********@seara.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>ana******@seara.com.br</td>\n",
+       "      <td>$2a$15$6f0MKf1mUEVfSDQeN3OVc.2MYTjZxklW/cwvNnU...</td>\n",
        "      <td>User000</td>\n",
-       "      <td>masc</td>\n",
-       "      <td>R************</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>l*********************************************...</td>\n",
        "      <td>T***</td>\n",
        "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1980/**/**</td>\n",
+       "      <td>1985/**/**</td>\n",
        "      <td>Ge*****</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>***********************************05639d5f07</td>\n",
+       "      <td>***********************************590344b44d</td>\n",
        "      <td>FK</td>\n",
        "      <td>ID</td>\n",
-       "      <td>usu***************@seara.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>eme**********@jbs.com.br</td>\n",
+       "      <td>$2a$15$pQkDPRa454W4Ls4si6OVseEQp/q8T04rxhiaA.j...</td>\n",
        "      <td>User001</td>\n",
-       "      <td>masc</td>\n",
-       "      <td>R************</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>l****************************</td>\n",
        "      <td>T***</td>\n",
        "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1980/**/**</td>\n",
-       "      <td>Us***********</td>\n",
+       "      <td>1990/**/**</td>\n",
+       "      <td>Su************</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>***********************************89dac60aa8</td>\n",
+       "      <td>***********************************b75fbac9e9</td>\n",
        "      <td>FK</td>\n",
        "      <td>ID</td>\n",
-       "      <td>sup************@jbs.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
+       "      <td>ren***********@jbs.com.br</td>\n",
+       "      <td>$2a$15$2nDRCcy8zthAjozlq2.P4eSOEBNaEy8Mj5.uF27...</td>\n",
        "      <td>User002</td>\n",
-       "      <td>masc</td>\n",
-       "      <td>A**************</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>l****************************</td>\n",
        "      <td>T***</td>\n",
        "      <td>2025/**/** - **********************</td>\n",
        "      <td>1990/**/**</td>\n",
-       "      <td>Ge*****</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>***********************************d5f5528818</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>usu**************@jbs.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User003</td>\n",
-       "      <td>masc</td>\n",
-       "      <td>A**************</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1990/**/**</td>\n",
-       "      <td>Us***********</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>***********************************ed47e5b949</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>ger********@jbs.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User004</td>\n",
-       "      <td>fem</td>\n",
-       "      <td>A***********</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1982/**/**</td>\n",
-       "      <td>Ge*****</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>***********************************6756130393</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>usu*************@jbs.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User005</td>\n",
-       "      <td>fem</td>\n",
-       "      <td>A***********</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1982/**/**</td>\n",
-       "      <td>Us***********</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>***********************************db2db47906</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>ger**********@sadia.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User006</td>\n",
-       "      <td>masc</td>\n",
-       "      <td>A***********</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1978/**/**</td>\n",
-       "      <td>Ge*****</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>***********************************5c2369d7f3</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>usu***************@sadia.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User007</td>\n",
-       "      <td>masc</td>\n",
-       "      <td>A***********</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1978/**/**</td>\n",
-       "      <td>Us***********</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>***********************************750d598b4a</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>sup*************@seara.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User008</td>\n",
-       "      <td>fem</td>\n",
-       "      <td>l*************************</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1985/**/**</td>\n",
-       "      <td>Ge*****</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>***********************************3575b88602</td>\n",
-       "      <td>FK</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>usu****************@seara.com.br</td>\n",
-       "      <td>$2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...</td>\n",
-       "      <td>User009</td>\n",
-       "      <td>fem</td>\n",
-       "      <td>l*************************</td>\n",
-       "      <td>T***</td>\n",
-       "      <td>2025/**/** - **********************</td>\n",
-       "      <td>1985/**/**</td>\n",
-       "      <td>Us***********</td>\n",
+       "      <td>Su************</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -304,64 +199,29 @@
       ],
       "text/plain": [
        "                                              id fk_fabrica_pseudo  \\\n",
-       "0  ***********************************cd87fea9ed                FK   \n",
-       "1  ***********************************05639d5f07                FK   \n",
-       "2  ***********************************89dac60aa8                FK   \n",
-       "3  ***********************************d5f5528818                FK   \n",
-       "4  ***********************************ed47e5b949                FK   \n",
-       "5  ***********************************6756130393                FK   \n",
-       "6  ***********************************db2db47906                FK   \n",
-       "7  ***********************************5c2369d7f3                FK   \n",
-       "8  ***********************************750d598b4a                FK   \n",
-       "9  ***********************************3575b88602                FK   \n",
+       "0  ***********************************5e971d6ddf                FK   \n",
+       "1  ***********************************590344b44d                FK   \n",
+       "2  ***********************************b75fbac9e9                FK   \n",
        "\n",
-       "  id_gerente_pseudo                      email_pseudo  \\\n",
-       "0                ID        ger**********@seara.com.br   \n",
-       "1                ID   usu***************@seara.com.br   \n",
-       "2                ID        sup************@jbs.com.br   \n",
-       "3                ID      usu**************@jbs.com.br   \n",
-       "4                ID            ger********@jbs.com.br   \n",
-       "5                ID       usu*************@jbs.com.br   \n",
-       "6                ID        ger**********@sadia.com.br   \n",
-       "7                ID   usu***************@sadia.com.br   \n",
-       "8                ID     sup*************@seara.com.br   \n",
-       "9                ID  usu****************@seara.com.br   \n",
+       "  id_gerente_pseudo               email_pseudo  \\\n",
+       "0                ID     ana******@seara.com.br   \n",
+       "1                ID   eme**********@jbs.com.br   \n",
+       "2                ID  ren***********@jbs.com.br   \n",
        "\n",
-       "                                 senha_criptografada nome_pseudo genero  \\\n",
-       "0  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User000   masc   \n",
-       "1  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User001   masc   \n",
-       "2  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User002   masc   \n",
-       "3  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User003   masc   \n",
-       "4  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User004    fem   \n",
-       "5  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User005    fem   \n",
-       "6  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User006   masc   \n",
-       "7  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User007   masc   \n",
-       "8  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User008    fem   \n",
-       "9  $2a$15$mABY7ntafExp1hTioSpzB.5EQBRlfIjuXA4Sc5F...     User009    fem   \n",
+       "                                 senha_criptografada nome_pseudo     genero  \\\n",
+       "0  $2a$15$6f0MKf1mUEVfSDQeN3OVc.2MYTjZxklW/cwvNnU...     User000   feminino   \n",
+       "1  $2a$15$pQkDPRa454W4Ls4si6OVseEQp/q8T04rxhiaA.j...     User001  masculino   \n",
+       "2  $2a$15$2nDRCcy8zthAjozlq2.P4eSOEBNaEy8Mj5.uF27...     User002  masculino   \n",
        "\n",
-       "       desc_tipoacesso_pseudo status_pseudo  \\\n",
-       "0               R************          T***   \n",
-       "1               R************          T***   \n",
-       "2             A**************          T***   \n",
-       "3             A**************          T***   \n",
-       "4                A***********          T***   \n",
-       "5                A***********          T***   \n",
-       "6                A***********          T***   \n",
-       "7                A***********          T***   \n",
-       "8  l*************************          T***   \n",
-       "9  l*************************          T***   \n",
+       "                              desc_tipoacesso_pseudo status_pseudo  \\\n",
+       "0  l*********************************************...          T***   \n",
+       "1                      l****************************          T***   \n",
+       "2                      l****************************          T***   \n",
        "\n",
-       "                   data_criacao_pseudo data_nascimento_pseudo   cargo_pseudo  \n",
-       "0  2025/**/** - **********************             1980/**/**        Ge*****  \n",
-       "1  2025/**/** - **********************             1980/**/**  Us***********  \n",
-       "2  2025/**/** - **********************             1990/**/**        Ge*****  \n",
-       "3  2025/**/** - **********************             1990/**/**  Us***********  \n",
-       "4  2025/**/** - **********************             1982/**/**        Ge*****  \n",
-       "5  2025/**/** - **********************             1982/**/**  Us***********  \n",
-       "6  2025/**/** - **********************             1978/**/**        Ge*****  \n",
-       "7  2025/**/** - **********************             1978/**/**  Us***********  \n",
-       "8  2025/**/** - **********************             1985/**/**        Ge*****  \n",
-       "9  2025/**/** - **********************             1985/**/**  Us***********  "
+       "                   data_criacao_pseudo data_nascimento_pseudo    cargo_pseudo  \n",
+       "0  2025/**/** - **********************             1985/**/**         Ge*****  \n",
+       "1  2025/**/** - **********************             1990/**/**  Su************  \n",
+       "2  2025/**/** - **********************             1990/**/**  Su************  "
       ]
      },
      "metadata": {},
@@ -375,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "8c6833de",
    "metadata": {},
    "outputs": [],
@@ -417,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "749cf18f",
    "metadata": {},
    "outputs": [],
@@ -459,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "75e73042",
    "metadata": {},
    "outputs": [],
